--- a/projections.ipynb
+++ b/projections.ipynb
@@ -4,6 +4,10 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-05-02T15:02:49.192359Z",
+     "start_time": "2018-05-02T15:02:46.839317Z"
+    },
     "scrolled": true
    },
    "outputs": [
@@ -41,9 +45,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
-    "scrolled": true
+    "ExecuteTime": {
+     "end_time": "2018-05-02T15:02:49.205930Z",
+     "start_time": "2018-05-02T15:02:49.198916Z"
+    },
+    "scrolled": false
    },
    "outputs": [
     {
@@ -52,7 +60,7 @@
        "<module 'niftiutils.helper_fxns' from 'c:\\\\users\\\\clinton\\\\documents\\\\niftiutils\\\\niftiutils\\\\helper_fxns.py'>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +92,9 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for cbctfile in glob.glob(join(\"D:\\\\\", \"*_CBCT\", \"*\")):\n",
@@ -664,6 +674,35 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.5.0"
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
