savepoint, working GAN

--- a/create-CT-projections.ipynb
+++ b/create-CT-projections.ipynb
@@ -304,11 +304,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 164,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-05-07T00:34:54.947686Z",
-     "start_time": "2018-05-07T00:34:54.939665Z"
+     "end_time": "2018-05-07T03:44:20.521858Z",
+     "start_time": "2018-05-07T03:44:20.509826Z"
     }
    },
    "outputs": [],
@@ -332,17 +332,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 192,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-05-07T00:41:22.993271Z",
-     "start_time": "2018-05-07T00:35:18.136545Z"
-    },
-    "collapsed": true
+     "end_time": "2018-05-07T13:30:37.199108Z",
+     "start_time": "2018-05-07T13:30:37.102172Z"
+    }
    },
    "outputs": [],
    "source": [
-    "for nii_path in glob.glob(r\"D:\\CBCT\\Train\\NIFTIs\\*\")[:20]:\n",
+    "os.remove(nii_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-05-07T13:30:26.260526Z",
+     "start_time": "2018-05-07T13:30:26.251502Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "219"
+      ]
+     },
+     "execution_count": 191,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[basename(nii_path) for nii_path in glob.glob(r\"D:\\CBCT\\Train\\NIFTIs\\*\")].index(\"E101349588_3.nii.gz\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2018-05-07T13:30:37.982Z"
+    },
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "E101379629_2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for nii_path in glob.glob(r\"D:\\CBCT\\Train\\NIFTIs\\*\")[219:]:\n",
     "    imgnum = basename(nii_path)\n",
     "    imgnum = imgnum[:imgnum.find('.')]\n",
     "    print(imgnum)\n",
@@ -360,11 +406,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 185,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-05-07T00:35:14.070904Z",
-     "start_time": "2018-05-07T00:35:14.008741Z"
+     "end_time": "2018-05-07T13:00:06.027685Z",
+     "start_time": "2018-05-07T13:00:05.948272Z"
     },
     "collapsed": true
    },
@@ -386,9 +432,14 @@
     "\n",
     "        x,y,z = [int(random.random()*(cropI.shape[i]-dim)) for i in range(3)]\n",
     "        crop = [slice(x,x+dim), slice(y,y+dim), slice(z,z+dim)]\n",
+    "        ix = 0\n",
     "        while np.percentile(cropI[crop], 50) < .1:\n",
     "            x,y,z = [int(random.random()*(cropI.shape[i]-dim)) for i in range(3)]\n",
     "            crop = [slice(x,x+dim), slice(y,y+dim), slice(z,z+dim)]\n",
+    "            ix += 1\n",
+    "            if ix > 10:\n",
+    "                print(nii_path, \"not dense enough\")\n",
+    "                return\n",
     "        cropI = cropI[crop]\n",
     "            \n",
     "        cropI += np.random.normal(scale=.01, size=cropI.shape)\n",
@@ -409,20 +460,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 180,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-05-06T19:58:35.164597Z",
-     "start_time": "2018-05-06T19:58:32.325812Z"
-    },
-    "collapsed": true
+     "end_time": "2018-05-07T04:41:15.831696Z",
+     "start_time": "2018-05-07T04:41:12.794955Z"
+    }
    },
    "outputs": [],
    "source": [
-    "for fn in glob.glob(join(C.npy_dir, \"*_proj.npy\")):\n",
+    "for fn in glob.glob(join(C.npy_dir, \"*_img.npy\")):\n",
     "    cropI = np.load(fn)\n",
-    "    cropI = np.transpose(cropI, (1,0,2))\n",
-    "    np.save(fn, cropI)"
+    "    if np.isnan(cropI.min()):\n",
+    "        print(fn)\n",
+    "    #np.save(fn, cropI)"
    ]
   },
   {
