--- a/create-CT-projections.ipynb
+++ b/create-CT-projections.ipynb
@@ -332,11 +332,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 197,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-05-07T13:30:37.199108Z",
-     "start_time": "2018-05-07T13:30:37.102172Z"
+     "end_time": "2018-05-07T15:39:08.467296Z",
+     "start_time": "2018-05-07T15:39:08.446268Z"
     }
    },
    "outputs": [],
@@ -346,27 +346,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 199,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-05-07T13:30:26.260526Z",
-     "start_time": "2018-05-07T13:30:26.251502Z"
+     "end_time": "2018-05-07T16:38:52.408254Z",
+     "start_time": "2018-05-07T16:38:52.384189Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "219"
+       "493"
       ]
      },
-     "execution_count": 191,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "[basename(nii_path) for nii_path in glob.glob(r\"D:\\CBCT\\Train\\NIFTIs\\*\")].index(\"E101349588_3.nii.gz\")"
+    "[basename(nii_path) for nii_path in glob.glob(r\"D:\\CBCT\\Train\\NIFTIs\\*\")].index(\"E106060756_3.nii.gz\")"
    ]
   },
   {
@@ -374,21 +374,14 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2018-05-07T13:30:37.982Z"
+     "end_time": "2018-05-07T16:41:05.066352Z",
+     "start_time": "2018-05-07T16:38:56.848365Z"
     },
-    "scrolled": true
+    "collapsed": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "E101379629_2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for nii_path in glob.glob(r\"D:\\CBCT\\Train\\NIFTIs\\*\")[219:]:\n",
+    "for nii_path in glob.glob(r\"D:\\CBCT\\Train\\NIFTIs\\*\")[493:]:\n",
     "    imgnum = basename(nii_path)\n",
     "    imgnum = imgnum[:imgnum.find('.')]\n",
     "    print(imgnum)\n",
@@ -437,7 +430,7 @@
     "            x,y,z = [int(random.random()*(cropI.shape[i]-dim)) for i in range(3)]\n",
     "            crop = [slice(x,x+dim), slice(y,y+dim), slice(z,z+dim)]\n",
     "            ix += 1\n",
-    "            if ix > 10:\n",
+    "            if ix > 100:\n",
     "                print(nii_path, \"not dense enough\")\n",
     "                return\n",
     "        cropI = cropI[crop]\n",
@@ -460,14 +453,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 201,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-05-07T04:41:15.831696Z",
-     "start_time": "2018-05-07T04:41:12.794955Z"
+     "end_time": "2018-05-07T19:08:46.566874Z",
+     "start_time": "2018-05-07T19:04:31.837575Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Clinton\\AppData\\Local\\conda\\conda\\envs\\old-keras\\lib\\site-packages\\numpy\\core\\_methods.py:29: RuntimeWarning: invalid value encountered in reduce\n",
+      "  return umr_minimum(a, axis, None, out, keepdims)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "D:\\CBCT\\Train\\NPYs\\E100788783_2_0_img.npy\n",
+      "D:\\CBCT\\Train\\NPYs\\E100788783_2_10_img.npy\n",
+      "D:\\CBCT\\Train\\NPYs\\E100788783_2_11_img.npy\n",
+      "D:\\CBCT\\Train\\NPYs\\E100788783_2_12_img.npy\n",
+      "D:\\CBCT\\Train\\NPYs\\E100788783_2_13_img.npy\n",
+      "D:\\CBCT\\Train\\NPYs\\E100788783_2_14_img.npy\n",
+      "D:\\CBCT\\Train\\NPYs\\E100788783_2_15_img.npy\n",
+      "D:\\CBCT\\Train\\NPYs\\E100788783_2_16_img.npy\n",
+      "D:\\CBCT\\Train\\NPYs\\E100788783_2_17_img.npy\n",
+      "D:\\CBCT\\Train\\NPYs\\E100788783_2_18_img.npy\n",
+      "D:\\CBCT\\Train\\NPYs\\E100788783_2_19_img.npy\n",
+      "D:\\CBCT\\Train\\NPYs\\E100788783_2_1_img.npy\n",
+      "D:\\CBCT\\Train\\NPYs\\E100788783_2_2_img.npy\n",
+      "D:\\CBCT\\Train\\NPYs\\E100788783_2_3_img.npy\n",
+      "D:\\CBCT\\Train\\NPYs\\E100788783_2_4_img.npy\n",
+      "D:\\CBCT\\Train\\NPYs\\E100788783_2_5_img.npy\n",
+      "D:\\CBCT\\Train\\NPYs\\E100788783_2_6_img.npy\n",
+      "D:\\CBCT\\Train\\NPYs\\E100788783_2_7_img.npy\n",
+      "D:\\CBCT\\Train\\NPYs\\E100788783_2_8_img.npy\n",
+      "D:\\CBCT\\Train\\NPYs\\E100788783_2_9_img.npy\n"
+     ]
+    }
+   ],
    "source": [
     "for fn in glob.glob(join(C.npy_dir, \"*_img.npy\")):\n",
     "    cropI = np.load(fn)\n",
