--- a/projections.ipynb
+++ b/projections.ipynb
@@ -555,7 +555,9 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
